2010-06-14  Cyril Robert <cyrilrbt@gmail.com>

	* caldav/davclient.py (DAVClient.put): Added a new "headers" parameter.
	* caldav/lib/commands.py (create_event): Added headers for content-type.
	* caldav/lib/commands.py: Added basic error management throughout the file.
	* caldav/objects.py: Minor improvements.
	* caldav/lib/error.py: New file, contains error definitions.

2010-06-09  Cyril Robert <cyrilrbt@gmail.com>

	* caldav/davclient.py (DAVClient.__init__, DAVClient.request): Added
	support for an optional http proxy.
	* tests/test_caldav.py (TestCalDAV.testProxy): Added a new test for the
	new proxy option.
	* tests/test_caldav.py (TestCalDAV.testSSL): Added one more test.
	* caldav/lib/commands.py (uid_search): Added new method.
	* caldav/objects.py (Calendar.event): Added new method to find an event by
	its UID.
	* tests/test_caldav.py: Added a quick test for the new methods

2010-06-07  Cyril Robert <cyrilrbt@gmail.com>

	* caldav/lib/commands.py (children, date_search): Removed instanciation of 
	children / events, it should be done in objects.
	* caldav/objects.py (Calendar.events, Principal.calendars, 
	Calendar.date_search): Made changes according to the new commands.children 
	method. Moved ugly import.